# qiskit-studio

./: .env.docker.template  .gitignore  README.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vitest.config.ts
api/: .env.template  README.md
api/chat-agent/: Dockerfile  agent.py  agents.docker.yaml  pyproject.toml
api/codegen-agent/: Dockerfile  pyproject.toml
api/coderun-agent/: Dockerfile  agent.py
app/: page.tsx
components/: code-panel.tsx  quantum-composer.tsx  workflow-agent-panel.tsx
components/nodes/: runtime-node.tsx
docker/milvus/: user.yaml
hooks/: useAICodeGeneration.ts
lib/: api-service.ts  code-generator.test.ts  debug.ts  workflow-agent.test.ts  workflow-agent.ts
scripts/: dev.sh
