[project]
name = "qiskit-studio-api-chat-agent"
version = "0.1.0"
description = "An API for an AI chat agent"
authors = [
    { name="Qiskit Studio Contributors" }
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "numpy==2.3.3",
    "pymilvus==2.6.2",
    "html2text==2025.4.15",
]