[project]
name = "qiskit-studio-api-codegen-agent"
version = "0.1.0"
description = "An API for an AI code generation agent"
authors = [
    { name="Qiskit Studio Contributors" }
]
license = {text = "Apache-2.0"}
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]
